# threadSafeLoggerC-

./: CMakeLists.txt  README.txt
Header/: Log.h
lib/googletest/: .travis.yml
lib/googletest/ci/: build-linux-autotools.sh  install-linux.sh
lib/googletest/googlemock/: CMakeLists.txt
logfile/: log.txt
src/: Automated_test.cpp  Log.cpp  Manual_test.cpp
